--- a/ПромАттестацияBigData_Бутин_REV2.ipynb
+++ b/ПромАттестацияBigData_Бутин_REV2.ipynb
@@ -2176,7 +2176,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Для оценки качества предсказания в spark реализованно несколько классов Если мы решаем задачу бинарной классификации (то есть классов - 2), то нам подойдет BinaryCLassificationEvaluator, а если классов больше 2-х, то MulticlassClassificationEvaluator"
+        "Для оценки качества предсказания в spark нам подойдет MulticlassCLassificationEvaluator, т.к классов больше 2-х (их 3)"
       ],
       "metadata": {
         "id": "z3x4-JBqCSEg"
@@ -2185,23 +2185,23 @@
     {
       "cell_type": "code",
       "source": [
-        "from pyspark.ml.evaluation import BinaryClassificationEvaluator"
+        "from pyspark.ml.evaluation import MulticlassClassificationEvaluator"
       ],
       "metadata": {
         "id": "2-PYW7FLCTau"
       },
-      "execution_count": 37,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "ev = BinaryClassificationEvaluator(labelCol='SpeciesIndex')"
+        "ev = MulticlassClassificationEvaluator(labelCol='SpeciesIndex')"
       ],
       "metadata": {
         "id": "ptWoWC_KCXpi"
       },
-      "execution_count": 38,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -2214,19 +2214,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RdgU0b_7CanX",
-        "outputId": "203bbb24-2eb4-4fa8-b81c-fcba211a505c"
+        "outputId": "20df48b8-1004-4503-da53-42fe8ca930d4"
       },
-      "execution_count": 39,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.0"
+              "0.9836065573770492"
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 48
         }
       ]
     },
@@ -2240,19 +2240,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xPVdShRECeNn",
-        "outputId": "3823bccb-d462-44bd-f333-634f5b29b14a"
+        "outputId": "9c1c8105-3846-4571-a5dd-312dd3ae7a9f"
       },
-      "execution_count": 40,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.0"
+              "0.9641751437417072"
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 49
         }
       ]
     }
